crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__request-ansi-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|┃                                                           |
|┃ △ approval · Bash                           asked 12s ago |
|┃ $ rm -rf target/                                          |
|┃                                                           |
|┃  allow    deny                           y allow · n deny |
|┃                                                           |
|                                                            |
|┃ ? question                                                |
|┃ Which heading level for the API page?                     |
|┃  1 h2 under Reference                                     |
|┃  2 h1, its own page                                       |
|                                                            |
|                                                            |

 0   0..1   fg=Magenta bg=Reset
 0   1..60  fg=Reset bg=Reset
 1   0..1   fg=Magenta bg=Reset
 1   1..2   fg=Reset bg=Reset
 1   2..3   fg=Magenta bg=Reset
 1   3..4   fg=Reset bg=Reset
 1   4..12  fg=Reset bg=Reset BOLD
 1  12..19  fg=DarkGray bg=Reset
 1  19..46  fg=Reset bg=Reset
 1  46..59  fg=DarkGray bg=Reset
 1  59..60  fg=Reset bg=Reset
 2   0..1   fg=Magenta bg=Reset
 2   1..60  fg=Reset bg=Reset
 3   0..1   fg=Magenta bg=Reset
 3   1..60  fg=Reset bg=Reset
 4   0..1   fg=Magenta bg=Reset
 4   1..2   fg=Reset bg=Reset
 4   2..9   fg=Black bg=Magenta BOLD
 4   9..11  fg=Reset bg=Reset
 4  11..17  fg=DarkGray bg=Reset
 4  17..43  fg=Reset bg=Reset
 4  43..59  fg=DarkGray bg=Reset
 4  59..60  fg=Reset bg=Reset
 5   0..1   fg=Magenta bg=Reset
 5   1..60  fg=Reset bg=Reset
 6   0..60  fg=Reset bg=Reset
 7   0..1   fg=Magenta bg=Reset
 7   1..2   fg=Reset bg=Reset
 7   2..3   fg=Magenta bg=Reset
 7   3..4   fg=Reset bg=Reset
 7   4..12  fg=Reset bg=Reset BOLD
 7  12..60  fg=Reset bg=Reset
 8   0..1   fg=Magenta bg=Reset
 8   1..60  fg=Reset bg=Reset
 9   0..1   fg=Magenta bg=Reset
 9   1..60  fg=Reset bg=Reset
10   0..1   fg=Magenta bg=Reset
10   1..60  fg=Reset bg=Reset
11   0..60  fg=Reset bg=Reset
12   0..60  fg=Reset bg=Reset
