crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__request-dark-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|┃                                                           |
|┃ △ approval · Bash                           asked 12s ago |
|┃ $ rm -rf target/                                          |
|┃                                                           |
|┃  allow    deny                           y allow · n deny |
|┃                                                           |
|                                                            |
|┃ ? question                                                |
|┃ Which heading level for the API page?                     |
|┃  1 h2 under Reference                                     |
|┃  2 h1, its own page                                       |
|                                                            |
|                                                            |

 0   0..1   fg=#e879c6 bg=#181a20
 0   1..60  fg=#e6e6e6 bg=#181a20
 1   0..1   fg=#e879c6 bg=#181a20
 1   1..2   fg=#e6e6e6 bg=#181a20
 1   2..3   fg=#e879c6 bg=#181a20
 1   3..4   fg=#e6e6e6 bg=#181a20
 1   4..12  fg=#e6e6e6 bg=#181a20 BOLD
 1  12..19  fg=#7f8492 bg=#181a20
 1  19..46  fg=#e6e6e6 bg=#181a20
 1  46..59  fg=#7f8492 bg=#181a20
 1  59..60  fg=#e6e6e6 bg=#181a20
 2   0..1   fg=#e879c6 bg=#181a20
 2   1..60  fg=#e6e6e6 bg=#181a20
 3   0..1   fg=#e879c6 bg=#181a20
 3   1..60  fg=#e6e6e6 bg=#181a20
 4   0..1   fg=#e879c6 bg=#181a20
 4   1..2   fg=#e6e6e6 bg=#181a20
 4   2..9   fg=#111216 bg=#e879c6 BOLD
 4   9..11  fg=#e6e6e6 bg=#181a20
 4  11..17  fg=#7f8492 bg=#181a20
 4  17..43  fg=#e6e6e6 bg=#181a20
 4  43..59  fg=#7f8492 bg=#181a20
 4  59..60  fg=#e6e6e6 bg=#181a20
 5   0..1   fg=#e879c6 bg=#181a20
 5   1..60  fg=#e6e6e6 bg=#181a20
 6   0..60  fg=#e6e6e6 bg=#111216
 7   0..1   fg=#e879c6 bg=#181a20
 7   1..2   fg=#e6e6e6 bg=#181a20
 7   2..3   fg=#e879c6 bg=#181a20
 7   3..4   fg=#e6e6e6 bg=#181a20
 7   4..12  fg=#e6e6e6 bg=#181a20 BOLD
 7  12..60  fg=#e6e6e6 bg=#181a20
 8   0..1   fg=#e879c6 bg=#181a20
 8   1..60  fg=#e6e6e6 bg=#181a20
 9   0..1   fg=#e879c6 bg=#181a20
 9   1..60  fg=#e6e6e6 bg=#181a20
10   0..1   fg=#e879c6 bg=#181a20
10   1..60  fg=#e6e6e6 bg=#181a20
11   0..60  fg=#e6e6e6 bg=#111216
12   0..60  fg=#e6e6e6 bg=#111216
