crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__request-light-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|┃                                                           |
|┃ △ approval · Bash                           asked 12s ago |
|┃ $ rm -rf target/                                          |
|┃                                                           |
|┃  allow    deny                           y allow · n deny |
|┃                                                           |
|                                                            |
|┃ ? question                                                |
|┃ Which heading level for the API page?                     |
|┃  1 h2 under Reference                                     |
|┃  2 h1, its own page                                       |
|                                                            |
|                                                            |

 0   0..1   fg=#b0307f bg=#f6f7f9
 0   1..60  fg=#1c1c1c bg=#f6f7f9
 1   0..1   fg=#b0307f bg=#f6f7f9
 1   1..2   fg=#1c1c1c bg=#f6f7f9
 1   2..3   fg=#b0307f bg=#f6f7f9
 1   3..4   fg=#1c1c1c bg=#f6f7f9
 1   4..12  fg=#1c1c1c bg=#f6f7f9 BOLD
 1  12..19  fg=#6b6f7a bg=#f6f7f9
 1  19..46  fg=#1c1c1c bg=#f6f7f9
 1  46..59  fg=#6b6f7a bg=#f6f7f9
 1  59..60  fg=#1c1c1c bg=#f6f7f9
 2   0..1   fg=#b0307f bg=#f6f7f9
 2   1..60  fg=#1c1c1c bg=#f6f7f9
 3   0..1   fg=#b0307f bg=#f6f7f9
 3   1..60  fg=#1c1c1c bg=#f6f7f9
 4   0..1   fg=#b0307f bg=#f6f7f9
 4   1..2   fg=#1c1c1c bg=#f6f7f9
 4   2..9   fg=#ffffff bg=#b0307f BOLD
 4   9..11  fg=#1c1c1c bg=#f6f7f9
 4  11..17  fg=#6b6f7a bg=#f6f7f9
 4  17..43  fg=#1c1c1c bg=#f6f7f9
 4  43..59  fg=#6b6f7a bg=#f6f7f9
 4  59..60  fg=#1c1c1c bg=#f6f7f9
 5   0..1   fg=#b0307f bg=#f6f7f9
 5   1..60  fg=#1c1c1c bg=#f6f7f9
 6   0..60  fg=#1c1c1c bg=#ffffff
 7   0..1   fg=#b0307f bg=#f6f7f9
 7   1..2   fg=#1c1c1c bg=#f6f7f9
 7   2..3   fg=#b0307f bg=#f6f7f9
 7   3..4   fg=#1c1c1c bg=#f6f7f9
 7   4..12  fg=#1c1c1c bg=#f6f7f9 BOLD
 7  12..60  fg=#1c1c1c bg=#f6f7f9
 8   0..1   fg=#b0307f bg=#f6f7f9
 8   1..60  fg=#1c1c1c bg=#f6f7f9
 9   0..1   fg=#b0307f bg=#f6f7f9
 9   1..60  fg=#1c1c1c bg=#f6f7f9
10   0..1   fg=#b0307f bg=#f6f7f9
10   1..60  fg=#1c1c1c bg=#f6f7f9
11   0..60  fg=#1c1c1c bg=#ffffff
12   0..60  fg=#1c1c1c bg=#ffffff
