crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__select-100-ansi-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind                                                                                              |
|behind                                                                                              |
|behind              ┌ switch · api ─────────────────────────────────────── esc ┐                    |
|behind              │                                                          │                    |
|behind              │  search   cl                                             │                    |
|behind              │                                                          │                    |
|behind              │  same provider · conversation continues                  │                    |
|behind              │   ● claude-main                                  5h 38%  │                    |
|behind              │ ▶ ○ claude-alt                                    5h 4%  │                    |
|behind              │                                                          │                    |
|behind              │  other provider · replays the transcript                 │                    |
|behind              │   ○ codex-work                                  day 91%  │                    |
|behind              │                                                          │                    |
|behind              │  model: opus                                             │                    |
|behind              │                                                          │                    |
|behind              │  enter switch  esc close                                 │                    |
|behind              │                                                          │                    |
|behind              └──────────────────────────────────────────────────────────┘                    |
|behind                                                                                              |
|behind                                                                                              |

 0   0..100 fg=DarkGray bg=Reset
 1   0..100 fg=DarkGray bg=Reset
 2   0..22  fg=DarkGray bg=Reset
 2  22..34  fg=Reset bg=Reset BOLD
 2  34..100 fg=DarkGray bg=Reset
 3   0..21  fg=DarkGray bg=Reset
 3  21..79  fg=Reset bg=Reset
 3  79..100 fg=DarkGray bg=Reset
 4   0..21  fg=DarkGray bg=Reset
 4  21..23  fg=Reset bg=Reset
 4  23..29  fg=Cyan bg=Reset BOLD
 4  29..32  fg=Reset bg=Reset
 4  32..33  fg=Reset bg=Reset REVERSED
 4  33..79  fg=Reset bg=Reset
 4  79..100 fg=DarkGray bg=Reset
 5   0..21  fg=DarkGray bg=Reset
 5  21..79  fg=Reset bg=Reset
 5  79..100 fg=DarkGray bg=Reset
 6   0..21  fg=DarkGray bg=Reset
 6  21..23  fg=Reset bg=Reset
 6  23..61  fg=Reset bg=Reset BOLD
 6  61..79  fg=Reset bg=Reset
 6  79..100 fg=DarkGray bg=Reset
 7   0..21  fg=DarkGray bg=Reset
 7  21..22  fg=Reset bg=Reset
 7  22..23  fg=Cyan bg=Reset
 7  23..24  fg=Reset bg=Reset
 7  24..25  fg=Yellow bg=Reset
 7  25..71  fg=Reset bg=Reset
 7  71..77  fg=DarkGray bg=Reset
 7  77..79  fg=Reset bg=Reset
 7  79..100 fg=DarkGray bg=Reset
 8   0..21  fg=DarkGray bg=Reset
 8  21..22  fg=Reset bg=Reset
 8  22..23  fg=Cyan bg=Reset
 8  23..24  fg=Reset bg=Reset
 8  24..36  fg=Reset bg=Reset BOLD
 8  36..72  fg=Reset bg=Reset
 8  72..77  fg=DarkGray bg=Reset
 8  77..79  fg=Reset bg=Reset
 8  79..100 fg=DarkGray bg=Reset
 9   0..21  fg=DarkGray bg=Reset
 9  21..79  fg=Reset bg=Reset
 9  79..100 fg=DarkGray bg=Reset
10   0..21  fg=DarkGray bg=Reset
10  21..23  fg=Reset bg=Reset
10  23..62  fg=Reset bg=Reset BOLD
10  62..79  fg=Reset bg=Reset
10  79..100 fg=DarkGray bg=Reset
11   0..21  fg=DarkGray bg=Reset
11  21..22  fg=Reset bg=Reset
11  22..23  fg=Cyan bg=Reset
11  23..24  fg=Reset bg=Reset
11  24..25  fg=DarkGray bg=Reset
11  25..70  fg=Reset bg=Reset
11  70..77  fg=DarkGray bg=Reset
11  77..79  fg=Reset bg=Reset
11  79..100 fg=DarkGray bg=Reset
12   0..21  fg=DarkGray bg=Reset
12  21..79  fg=Reset bg=Reset
12  79..100 fg=DarkGray bg=Reset
13   0..21  fg=DarkGray bg=Reset
13  21..23  fg=Reset bg=Reset
13  23..77  fg=DarkGray bg=Reset
13  77..79  fg=Reset bg=Reset
13  79..100 fg=DarkGray bg=Reset
14   0..21  fg=DarkGray bg=Reset
14  21..79  fg=Reset bg=Reset
14  79..100 fg=DarkGray bg=Reset
15   0..21  fg=DarkGray bg=Reset
15  21..23  fg=Reset bg=Reset
15  23..28  fg=Reset bg=Reset BOLD
15  28..35  fg=DarkGray bg=Reset
15  35..37  fg=Reset bg=Reset
15  37..40  fg=Reset bg=Reset BOLD
15  40..46  fg=DarkGray bg=Reset
15  46..79  fg=Reset bg=Reset
15  79..100 fg=DarkGray bg=Reset
16   0..21  fg=DarkGray bg=Reset
16  21..79  fg=Reset bg=Reset
16  79..100 fg=DarkGray bg=Reset
17   0..100 fg=DarkGray bg=Reset
18   0..100 fg=DarkGray bg=Reset
19   0..100 fg=DarkGray bg=Reset
