crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__select-100-dark-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind                                                                                              |
|behind                                                                                              |
|behind              ┌ switch · api ─────────────────────────────────────── esc ┐                    |
|behind              │                                                          │                    |
|behind              │  search   cl                                             │                    |
|behind              │                                                          │                    |
|behind              │  same provider · conversation continues                  │                    |
|behind              │   ● claude-main                                  5h 38%  │                    |
|behind              │ ▶ ○ claude-alt                                    5h 4%  │                    |
|behind              │                                                          │                    |
|behind              │  other provider · replays the transcript                 │                    |
|behind              │   ○ codex-work                                  day 91%  │                    |
|behind              │                                                          │                    |
|behind              │  model: opus                                             │                    |
|behind              │                                                          │                    |
|behind              │  enter switch  esc close                                 │                    |
|behind              │                                                          │                    |
|behind              └──────────────────────────────────────────────────────────┘                    |
|behind                                                                                              |
|behind                                                                                              |

 0   0..100 fg=#7f8492 bg=#111216
 1   0..100 fg=#7f8492 bg=#111216
 2   0..20  fg=#7f8492 bg=#111216
 2  20..22  fg=#181a20 bg=#181a20
 2  22..34  fg=#e6e6e6 bg=#181a20 BOLD
 2  34..74  fg=#181a20 bg=#181a20
 2  74..79  fg=#7f8492 bg=#181a20
 2  79..80  fg=#181a20 bg=#181a20
 2  80..100 fg=#7f8492 bg=#111216
 3   0..20  fg=#7f8492 bg=#111216
 3  20..21  fg=#181a20 bg=#181a20
 3  21..79  fg=#e6e6e6 bg=#181a20
 3  79..80  fg=#181a20 bg=#181a20
 3  80..100 fg=#7f8492 bg=#111216
 4   0..20  fg=#7f8492 bg=#111216
 4  20..21  fg=#181a20 bg=#181a20
 4  21..23  fg=#e6e6e6 bg=#181a20
 4  23..29  fg=#7aa2f7 bg=#181a20 BOLD
 4  29..31  fg=#e6e6e6 bg=#181a20
 4  31..32  fg=#e6e6e6 bg=#21242c
 4  32..33  fg=#e6e6e6 bg=#21242c REVERSED
 4  33..77  fg=#e6e6e6 bg=#21242c
 4  77..79  fg=#e6e6e6 bg=#181a20
 4  79..80  fg=#181a20 bg=#181a20
 4  80..100 fg=#7f8492 bg=#111216
 5   0..20  fg=#7f8492 bg=#111216
 5  20..21  fg=#181a20 bg=#181a20
 5  21..79  fg=#e6e6e6 bg=#181a20
 5  79..80  fg=#181a20 bg=#181a20
 5  80..100 fg=#7f8492 bg=#111216
 6   0..20  fg=#7f8492 bg=#111216
 6  20..21  fg=#181a20 bg=#181a20
 6  21..23  fg=#e6e6e6 bg=#181a20
 6  23..61  fg=#e6e6e6 bg=#181a20 BOLD
 6  61..79  fg=#e6e6e6 bg=#181a20
 6  79..80  fg=#181a20 bg=#181a20
 6  80..100 fg=#7f8492 bg=#111216
 7   0..20  fg=#7f8492 bg=#111216
 7  20..21  fg=#181a20 bg=#181a20
 7  21..22  fg=#e6e6e6 bg=#181a20
 7  22..23  fg=#7aa2f7 bg=#181a20
 7  23..24  fg=#e6e6e6 bg=#181a20
 7  24..25  fg=#e0af68 bg=#181a20
 7  25..71  fg=#e6e6e6 bg=#181a20
 7  71..77  fg=#7f8492 bg=#181a20
 7  77..79  fg=#e6e6e6 bg=#181a20
 7  79..80  fg=#181a20 bg=#181a20
 7  80..100 fg=#7f8492 bg=#111216
 8   0..20  fg=#7f8492 bg=#111216
 8  20..21  fg=#181a20 bg=#181a20
 8  21..22  fg=#e6e6e6 bg=#181a20
 8  22..23  fg=#7aa2f7 bg=#21242c
 8  23..24  fg=#e6e6e6 bg=#21242c
 8  24..36  fg=#e6e6e6 bg=#21242c BOLD
 8  36..72  fg=#e6e6e6 bg=#21242c
 8  72..77  fg=#7f8492 bg=#21242c
 8  77..78  fg=#e6e6e6 bg=#21242c
 8  78..79  fg=#e6e6e6 bg=#181a20
 8  79..80  fg=#181a20 bg=#181a20
 8  80..100 fg=#7f8492 bg=#111216
 9   0..20  fg=#7f8492 bg=#111216
 9  20..21  fg=#181a20 bg=#181a20
 9  21..79  fg=#e6e6e6 bg=#181a20
 9  79..80  fg=#181a20 bg=#181a20
 9  80..100 fg=#7f8492 bg=#111216
10   0..20  fg=#7f8492 bg=#111216
10  20..21  fg=#181a20 bg=#181a20
10  21..23  fg=#e6e6e6 bg=#181a20
10  23..62  fg=#e6e6e6 bg=#181a20 BOLD
10  62..79  fg=#e6e6e6 bg=#181a20
10  79..80  fg=#181a20 bg=#181a20
10  80..100 fg=#7f8492 bg=#111216
11   0..20  fg=#7f8492 bg=#111216
11  20..21  fg=#181a20 bg=#181a20
11  21..22  fg=#e6e6e6 bg=#181a20
11  22..23  fg=#7aa2f7 bg=#181a20
11  23..24  fg=#e6e6e6 bg=#181a20
11  24..25  fg=#7f8492 bg=#181a20
11  25..70  fg=#e6e6e6 bg=#181a20
11  70..77  fg=#7f8492 bg=#181a20
11  77..79  fg=#e6e6e6 bg=#181a20
11  79..80  fg=#181a20 bg=#181a20
11  80..100 fg=#7f8492 bg=#111216
12   0..20  fg=#7f8492 bg=#111216
12  20..21  fg=#181a20 bg=#181a20
12  21..79  fg=#e6e6e6 bg=#181a20
12  79..80  fg=#181a20 bg=#181a20
12  80..100 fg=#7f8492 bg=#111216
13   0..20  fg=#7f8492 bg=#111216
13  20..21  fg=#181a20 bg=#181a20
13  21..23  fg=#e6e6e6 bg=#181a20
13  23..77  fg=#7f8492 bg=#181a20
13  77..79  fg=#e6e6e6 bg=#181a20
13  79..80  fg=#181a20 bg=#181a20
13  80..100 fg=#7f8492 bg=#111216
14   0..20  fg=#7f8492 bg=#111216
14  20..21  fg=#181a20 bg=#181a20
14  21..79  fg=#e6e6e6 bg=#181a20
14  79..80  fg=#181a20 bg=#181a20
14  80..100 fg=#7f8492 bg=#111216
15   0..20  fg=#7f8492 bg=#111216
15  20..21  fg=#181a20 bg=#181a20
15  21..23  fg=#e6e6e6 bg=#181a20
15  23..28  fg=#e6e6e6 bg=#181a20 BOLD
15  28..35  fg=#7f8492 bg=#181a20
15  35..37  fg=#e6e6e6 bg=#181a20
15  37..40  fg=#e6e6e6 bg=#181a20 BOLD
15  40..46  fg=#7f8492 bg=#181a20
15  46..79  fg=#e6e6e6 bg=#181a20
15  79..80  fg=#181a20 bg=#181a20
15  80..100 fg=#7f8492 bg=#111216
16   0..20  fg=#7f8492 bg=#111216
16  20..21  fg=#181a20 bg=#181a20
16  21..79  fg=#e6e6e6 bg=#181a20
16  79..80  fg=#181a20 bg=#181a20
16  80..100 fg=#7f8492 bg=#111216
17   0..20  fg=#7f8492 bg=#111216
17  20..80  fg=#181a20 bg=#181a20
17  80..100 fg=#7f8492 bg=#111216
18   0..100 fg=#7f8492 bg=#111216
19   0..100 fg=#7f8492 bg=#111216
